--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<table border="1px" bgcolor="Yellow">
+	<table border="1px" bgcolor="Yellow" bordercolor="black">
 		<caption>Student Details</caption>
         <thead>
             <th>NAME</th>
